--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                                 <li>
                                   <hr color="#c2c3c0">
                                   Blog Page 
-                                 <a href="Blog_Page/index.html" style="text-decoration: none;">
+                                 <a href="website.html" style="text-decoration: none;">
                                     &#8594; Blog Page</a>
                                 </li>
                             </ul>
