--- a/index.html
+++ b/index.html
@@ -233,7 +233,10 @@
                                                 3&#11088;&#64;C-Language(HackerRank)
                                             </li>
                                             <li>
-                                                1&#11088;&#64;CodeChef (1195 Highest Rating)
+                                                2&#11088;&#64;C++(HackerRank)
+                                            </li>
+                                            <li>
+                                                1&#11088;&#64;CodeChef (1202 Highest Rating)
                                             </li>
                                         <hr color="black">
                                         <hr color="black">
