added an achievement

--- a/index.html
+++ b/index.html
@@ -217,6 +217,21 @@
                                             </li>
                                         </ul>
                                     </li>
+                                    <hr color="black">
+                                        <hr color="black">
+                                        <hr color="black">
+                                    <li>
+                                        <b>
+                                            Contributor at Girlscript Winter of Blockchain
+                                        </b>
+                                        <ul>
+                                            <li>
+                                                January 2023 - Present.
+                                            </li>
+                                            <li>
+                                                At learning stage.
+                                            </li>
+                                        </ul>
                                     <li>
                                         <hr color="black">
                                         <hr color="black">
